--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "postcss": "^8.4.47",
     "postcss-rtlcss": "^5.5.0",
     "rtlcss": "^4.3.0",
-    "sass": "^1.80.5",
-    "vite": "^5.4.10",
-    "vite-svg-loader": "^5.1.0",
-    "vite-file-include": "^1.1.1"
+    "sass": "^1.93.3",
+    "vite": "^5.4.21",
+    "vite-file-include": "^1.2.0",
+    "vite-svg-loader": "^5.1.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
